correción de ubicación de archivos

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<script type="text/javascript" src="scripusu.js"></script>
+<script type="text/javascript" src="./frontend/scripusu.js"></script>
 </head>
 <body>
  
